# libpcsclite-bcas

./: .editorconfig  .gitignore  Crypto.cpp  Decoder.h  Keys.cpp  Keyset.h  Makefile  Makefile.am  README.md  configure.ac  libpcsclite-bcas.pc.in  softcas.sln  softcas.vcxproj  softcas.vcxproj.filters
src/: Crypto.h  Decoder-ECM.cpp  Keys.cpp  Keys.h  Keyset.cpp  libpcsclite-bcas.pc.in  winscard.cpp
